@@ -20,6 +20,8 @@ Revision history for Perl module CPAN::Mini::Webserver:
        and remove redundant filename prefix (patch by jesse)
      - require Parse::CPAN::Packages 2.28 to reduce warnings (patch
        by tokuhirom)
+     - add links to cpantesters, cpanforum, cpanratings and RT
+       (patch by martijn)
 
 0.38 Mon Aug 18 09:15:25 BST 2008
      - fix bug which repeated metadata (spotted by claes)
